--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     </span>
                   </div>
                   <div class="img-box">
-                    <img src="./assets/images/tamburins.png" alt="">
+                    <img src="./assets/images/tamburins.png" alt="탬버린즈">
                   </div>
                 </a>
               </div>
@@ -294,7 +294,7 @@
                     </span>
                   </div>
                   <div class="img-box">
-                    <img src="./assets/images/kakaoenter.png" alt="">
+                    <img src="./assets/images/kakaoenter.png" alt="카카오엔터프라이즈">
                   </div>
                 </a>
               </div>
@@ -313,24 +313,24 @@
                     </span>
                   </div>
                   <div class="img-box">
-                    <img src="./assets/images/navercareer.png" alt="">
+                    <img src="./assets/images/navercareer.png" alt="네이버커리어스">
                   </div>
                 </a>
               </div>
               <div class="work-item bg07">
-                <a href="">
+                <a href="https://zyzy8810.github.io/andar/" target="_blank">
                   <div class="work-top">
                     <p class="numb">07.</p>
                     <p class="work">안다르</p>
                   </div>
                   <div class="work-bottom">
-                    <p class="cate">#ADAPTIVE</p>
+                    <p class="cate">#ADAPTIVE #SWIPER</p>
                     <span class="material-symbols-outlined arrow">
                       arrow_forward
                     </span>
                   </div>
                   <div class="img-box">
-                    <img src="./assets/images/andar-b.png" alt="">
+                    <img src="./assets/images/andar-b.png" alt="안다르">
                   </div>
                 </a>
               </div>
