네이버 주소 추가

--- a/index.html
+++ b/index.html
@@ -354,13 +354,13 @@
                 </a>
               </div>
               <div class="work-item bg09">
-                <a href="">
+                <a href="https://zyzy8810.github.io/naver/" target="_blank">
                   <div class="work-top">
                     <p class="numb">09.</p>
                     <p class="work">네이버</p>
                   </div>
                   <div class="work-bottom">
-                    <p class="cate">#PC #ADAPTIVE</p>
+                    <p class="cate">#SEMENTIC #IR/IS</p>
                     <span class="material-symbols-outlined arrow">
                       arrow_forward
                     </span>
