--- a/index.html
+++ b/index.html
@@ -337,13 +337,13 @@
             </div>
             <div class="group-work">
               <div class="work-item bg08">
-                <a href="">
+                <a href="https://zyzy8810.github.io/seoulcityhall/" target="_blank">
                   <div class="work-top">
                     <p class="numb">08.</p>
                     <p class="work">서울시청</p>
                   </div>
                   <div class="work-bottom">
-                    <p class="cate">#PC #ADAPTIVE</p>
+                    <p class="cate">#SEMENTIC #IR/IS </p>
                     <span class="material-symbols-outlined arrow">
                       arrow_forward
                     </span>
