--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                     <p class="work">서울시청</p>
                   </div>
                   <div class="work-bottom">
-                    <p class="cate">#SEMENTIC #IR/IS </p>
+                    <p class="cate">#ADAPTIVE #SEMENTIC #IR/IS</p>
                     <span class="material-symbols-outlined arrow">
                       arrow_forward
                     </span>
@@ -360,7 +360,7 @@
                     <p class="work">네이버</p>
                   </div>
                   <div class="work-bottom">
-                    <p class="cate">#SEMENTIC #IR/IS</p>
+                    <p class="cate">#ADAPTIVE #SEMENTIC #IR/IS</p>
                     <span class="material-symbols-outlined arrow">
                       arrow_forward
                     </span>
