--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 </a>
               </div>
               <div class="work-item bg05">
-                <a href="">
+                <a href="https://zyzy8810.github.io/kakaoenterprise/" target="_blank">
                   <div class="work-top">
                     <p class="numb">05.</p>
                     <p class="work">카카오엔터프라이즈</p>
