--- a/index.html
+++ b/index.html
@@ -229,13 +229,13 @@
             </div>
             <div class="group-work">
               <div class="work-item bg02">
-                <a href="">
+                <a href="https://zyzy8810.github.io/ohhouse/" target="_blank">
                   <div class="work-top">
                     <p class="numb">02.</p>
                     <p class="work">오늘의 집</p>
                   </div>
                   <div class="work-bottom">
-                    <p class="cate">#PC #JSON #SCSS #SWIPER</p>
+                    <p class="cate">#PC #SCSS #SWIPER</p>
                     <span class="material-symbols-outlined arrow">
                       arrow_forward
                     </span>
