--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
   <header class="header">
     <div id="top" class="logo-area">
-      <h1 class="logo"><a href="">
+      <h1 class="logo"><a href="#">
+        <span class="blind">JIYEONG KIM PORTFOLIO</span>
           JIyeong , KIM <span>/ PORTFOLIO</span>
         </a></h1>
     </div>
@@ -35,11 +36,11 @@
       <section class="sc-content">
         <div class="col-left">
           <div class="cont-item">
-            <a href="">
+            <a href="#">
               <div class="top">
                 <p class="cate">JI YEONG KIM</p>
                 <div class="icon-area">
-                  <img src="./assets/images/scroll3.svg" alt="">
+                  <img src="./assets/images/scroll3.svg" alt="보라색 스마일 아이콘">
                 </div>
               </div>
               <div class="mid">
@@ -75,6 +76,7 @@
         <div class="col-right">
           <div class="cont-wrap">
             <div class="cont-item white">
+              <span class="blind">포트폴리오로 이동</span>
               <a href="#myWork">
                 <div class="mid">
                   <div class="marquee-track2">
@@ -101,6 +103,7 @@
           </div>
           <div class="cont-wrap">
             <div class="cont-item contact">
+              <span class="blind">CONTACT로 이동</span>
               <a href="#contact">
                 <div class="mid">
                   <div class="marquee-track3">
@@ -147,7 +150,7 @@
             <div class="slide-wrap">
               <div class="left">
                 <div class="ic">
-                  <img src="./assets/images/ic01.png" alt="">
+                  <img src="./assets/images/ic01.png">
                 </div>
                 <div class="desc-box">
                   <p class="cate">Intro</p>
@@ -173,7 +176,7 @@
             <div class="slide-wrap">
               <div class="left">
                 <div class="ic">
-                  <img src="./assets/images/ic02-.png" alt="">
+                  <img src="./assets/images/ic02-.png">
                 </div>
                 <div class="desc-box">
                   <p class="cate">Career & Education</p>
@@ -223,7 +226,7 @@
                   </span>
                 </div>
                 <div class="img-box">
-                  <img src="./assets/images/romeo.png" alt="">
+                  <img src="./assets/images/romeo.png" alt="ROMEO COLLECTION">
                 </div>
               </a>
             </div>
@@ -241,7 +244,7 @@
                     </span>
                   </div>
                   <div class="img-box">
-                    <img src="./assets/images/ohhouse.jpg" alt="">
+                    <img src="./assets/images/ohhouse.jpg" alt="오늘의집">
                   </div>
                 </a>
               </div>
@@ -258,7 +261,7 @@
                     </span>
                   </div>
                   <div class="img-box">
-                    <img src="./assets/images/galleria.jpg" alt="">
+                    <img src="./assets/images/galleria.jpg" alt="갤러리아몰">
                   </div>
                 </a>
               </div>
@@ -349,7 +352,7 @@
                     </span>
                   </div>
                   <div class="img-box">
-                    <img src="./assets/images/seoul.jpg" alt="">
+                    <img src="./assets/images/seoul.jpg" alt="서울시청">
                   </div>
                 </a>
               </div>
@@ -366,7 +369,7 @@
                     </span>
                   </div>
                   <div class="img-box">
-                    <img src="./assets/images/work10.png" alt="">
+                    <img src="./assets/images/work10.png" alt="네이버">
                   </div>
                 </a>
               </div>
@@ -391,7 +394,7 @@
               </a>
             </div>
             <div class="link-item">
-              <a href="" href="">
+              <a href="#" href="">
                 <span class="text">+82-010-5517-4341</span>
                 <span class="bg">
                   <span></span>
@@ -419,7 +422,7 @@
         </div>
         <div class="group-circle">
           <div class="circle-wrap">
-            <img class="contact-circle" src="./assets/images/smile.png" alt="">
+            <img class="contact-circle" src="./assets/images/smile.png" alt="핑크색 스마일 아이콘">
           </div>
         </div>
       </section>
@@ -428,8 +431,8 @@
   </main>
   <footer class="footer">
     <div class="footer-wrap">
-      <button class="btn-top">
-        <a href=""><img id="back" src="./assets/images/down-arrow.svg" alt=""></a>
+      <button class="btn-top" aria-label="상단으로 이동">
+        <a href="#"><img id="back" src="./assets/images/down-arrow.svg"></a>
       </button>
 
       <small class="copy-item">
