--- a/index.html
+++ b/index.html
@@ -217,10 +217,13 @@
               <a href="https://zyzy8810.github.io/romeocollection/" target="_blank">
                 <div class="work-top">
                   <p class="numb">01.</p>
-                  <p class="work">ROMEO</p>
+                  <p class="work">ROMEO COLLECTION</p>
                 </div>
                 <div class="work-bottom">
-                  <p class="cate">#PC #SCSS #GSAP</p>
+                  <div class="group-flex">
+                    <p class="cate">#PC #SCSS #GSAP</p>
+                    <span class="desc">코드의 가독성과 재사용성을 고려해 scss를 이용하고 gsap을 이용해 인터랙션을 준 romeo collection 적응형 pc 사이트입니다.</span>
+                  </div>
                   <span class="material-symbols-outlined arrow">
                     arrow_forward
                   </span>
@@ -238,7 +241,10 @@
                     <p class="work">오늘의 집</p>
                   </div>
                   <div class="work-bottom">
-                    <p class="cate">#PC #SCSS #SWIPER</p>
+                    <div class="group-flex">
+                      <p class="cate">#PC #SCSS #SWIPER</p>
+                      <span class="desc">scss를 사용하여 코드의 가독성과 재사용성을 높여 클론 코딩한 오늘의집 pc사이트입니다.</span>
+                    </div>
                     <span class="material-symbols-outlined arrow">
                       arrow_forward
                     </span>
@@ -255,7 +261,10 @@
                     <p class="work">갤러리아몰</p>
                   </div>
                   <div class="work-bottom">
-                    <p class="cate">#MOBILE #ADAPTIVE #SWIPER</p>
+                    <div class="group-flex">
+                      <p class="cate">#MOBILE #ADAPTIVE #SWIPER</p>
+                      <span class="desc">갤러리아몰 공식 사이트를 클론 코딩한 모바일 적응형 사이트입니다.</span>
+                    </div>
                     <span class="material-symbols-outlined arrow">
                       arrow_forward
                     </span>
@@ -274,7 +283,10 @@
                     <p class="work">탬버린즈</p>
                   </div>
                   <div class="work-bottom">
-                    <p class="cate">#PC #GSAP #RE:NEWAL</p>
+                    <div class="group-flex">
+                      <p class="cate">#PC #GSAP #RE:NEWAL</p>
+                      <span class="desc">탬버린즈 사이트 디자인을 리뉴얼 하고 gsap을 이용해 인터랙션을 준 반응형 사이트입니다.</span>
+                    </div>
                     <span class="material-symbols-outlined arrow">
                       arrow_forward
                     </span>
@@ -291,7 +303,10 @@
                     <p class="work">카카오엔터프라이즈</p>
                   </div>
                   <div class="work-bottom">
-                    <p class="cate">#PC #SWIPER</p>
+                    <div class="group-flex">
+                      <p class="cate">#PC #SWIPER</p>
+                      <span class="desc">카카오엔터프라이즈 사이트를 클론코딩한 pc 사이트입니다.</span>
+                    </div>
                     <span class="material-symbols-outlined arrow">
                       arrow_forward
                     </span>
@@ -310,7 +325,10 @@
                     <p class="work">네이버커리어스</p>
                   </div>
                   <div class="work-bottom">
-                    <p class="cate">#RESPONSIVE #SWIPER</p>
+                    <div class="group-flex">
+                      <p class="cate">#RESPONSIVE #SWIPER</p>
+                      <span class="desc">네이버커리어스 사이트를 클론코딩한 반응형 사이트입니다.</span>
+                    </div>
                     <span class="material-symbols-outlined arrow">
                       arrow_forward
                     </span>
@@ -327,7 +345,10 @@
                     <p class="work">안다르</p>
                   </div>
                   <div class="work-bottom">
-                    <p class="cate">#ADAPTIVE #SWIPER</p>
+                    <div class="group-flex">
+                      <p class="cate">#ADAPTIVE #SWIPER</p>
+                      <span class="desc">안다르 사이트를 클론코딩한 모바일 적응형 사이트입니다.</span>
+                    </div>
                     <span class="material-symbols-outlined arrow">
                       arrow_forward
                     </span>
@@ -346,7 +367,10 @@
                     <p class="work">서울시청</p>
                   </div>
                   <div class="work-bottom">
-                    <p class="cate">#ADAPTIVE #SEMENTIC #IR/IS</p>
+                    <div class="group-flex">
+                      <p class="cate">#ADAPTIVE #SEMENTIC #IR/IS</p>
+                      <span class="desc">웹 접근성과 시멘틱 마크업에 주안점을 두어 서울시청 사이트를 클론코딩한 pc 적응형 사이트입니다.</span>
+                    </div>
                     <span class="material-symbols-outlined arrow">
                       arrow_forward
                     </span>
@@ -363,7 +387,10 @@
                     <p class="work">네이버</p>
                   </div>
                   <div class="work-bottom">
-                    <p class="cate">#ADAPTIVE #SEMENTIC #IR/IS</p>
+                    <div class="group-flex">
+                      <p class="cate">#ADAPTIVE #SEMENTIC #IR/IS</p>
+                      <span class="desc">웹 접근성과 시멘틱 마크업에 주안점을 두어 네이버 사이트를 클론코딩한 pc 적응형 사이트입니다.</span>
+                      </div>
                     <span class="material-symbols-outlined arrow">
                       arrow_forward
                     </span>
