--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                   <div class="work-bottom">
                     <div class="group-flex">
                       <p class="cate">#ADAPTIVE #SEMENTIC #IR/IS</p>
-                      <span class="desc">웹 접근성과 시멘틱 마크업에 주안점을 두어 서울시청 사이트를 클론코딩한 pc 적응형 사이트입니다.</span>
+                      <span class="desc">웹 접근성과 시멘틱 마크업에 주안점을 두고 서울시청 사이트를 클론코딩한 pc 적응형 사이트입니다.</span>
                     </div>
                     <span class="material-symbols-outlined arrow">
                       arrow_forward
@@ -389,7 +389,7 @@
                   <div class="work-bottom">
                     <div class="group-flex">
                       <p class="cate">#ADAPTIVE #SEMENTIC #IR/IS</p>
-                      <span class="desc">웹 접근성과 시멘틱 마크업에 주안점을 두어 네이버 사이트를 클론코딩한 pc 적응형 사이트입니다.</span>
+                      <span class="desc">웹 접근성과 시멘틱 마크업에 주안점을 두고 네이버 사이트를 클론코딩한 pc 적응형 사이트입니다.</span>
                       </div>
                     <span class="material-symbols-outlined arrow">
                       arrow_forward
