--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                   <div class="work-bottom">
                     <div class="group-flex">
                       <p class="cate">#PC #GSAP #RE:NEWAL</p>
-                      <span class="desc">탬버린즈 사이트 디자인을 리뉴얼 하고 gsap을 이용해 인터랙션을 준 반응형 사이트입니다.</span>
+                      <span class="desc">탬버린즈 사이트 디자인을 리뉴얼 하고 gsap을 이용해 인터랙션을 준 pc 적응형 사이트입니다.</span>
                     </div>
                     <span class="material-symbols-outlined arrow">
                       arrow_forward
@@ -326,7 +326,7 @@
                   </div>
                   <div class="work-bottom">
                     <div class="group-flex">
-                      <p class="cate">#RESPONSIVE #SWIPER</p>
+                      <p class="cate">#RESPONSIVE #SWIPER #IR/IS</p>
                       <span class="desc">네이버커리어스 사이트를 클론코딩한 반응형 사이트입니다.</span>
                     </div>
                     <span class="material-symbols-outlined arrow">
