--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <div class="work-bottom">
                   <div class="group-flex">
                     <p class="cate">#PC #SCSS #GSAP</p>
-                    <span class="desc">코드의 가독성과 재사용성을 고려해 scss를 이용하고 gsap을 이용해 인터랙션을 준 romeo collection 적응형 pc 사이트입니다.</span>
+                    <span class="desc">코드의 가독성과 재사용성을 고려해 scss를 사용하고 gsap을 이용해 인터랙션을 준 romeo collection 적응형 pc 사이트입니다.</span>
                   </div>
                   <span class="material-symbols-outlined arrow">
                     arrow_forward
