--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 </a>
               </div>
               <div class="work-item bg03">
-                <a href="https://zyzy8810.github.io/galleria/">
+                <a href="https://zyzy8810.github.io/galleria/" target="_blank">
                   <div class="work-top">
                     <p class="numb">03.</p>
                     <p class="work">갤러리아몰</p>
@@ -421,7 +421,7 @@
               </a>
             </div>
             <div class="link-item">
-              <a href="#" href="">
+              <a href="#">
                 <span class="text">+82-010-5517-4341</span>
                 <span class="bg">
                   <span></span>
