--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JIYEONG KIM PORTFOLIO</title>
+  <!-- Primary Meta Tags -->
+<title>발전을 지향하는 웹 퍼블리셔 김지영입니다.</title>
+<meta name="title" content="발전을 지향하는 웹 퍼블리셔 김지영입니다." />
+<meta name="description" content="저의 포트폴리오들을 소개합니다. 감사합니다." />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://zyzy8810.github.io/jiyeongkim/" />
+<meta property="og:title" content="발전을 지향하는 웹 퍼블리셔 김지영입니다." />
+<meta property="og:description" content="저의 포트폴리오들을 소개합니다. 감사합니다." />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://zyzy8810.github.io/jiyeongkim/" />
+<meta property="twitter:title" content="발전을 지향하는 웹 퍼블리셔 김지영입니다." />
+<meta property="twitter:description" content="저의 포트폴리오들을 소개합니다. 감사합니다." />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
   <!-- css -->
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
   <link rel="stylesheet" href="./assets/css/layout.css">
