--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
 </head>
 
 <body>
-
+  
+  <div class="skip-nav">
+    <a href="#main">본문내용바로가기</a>
+  </div>
 
   <header class="header">
     <div id="top" class="logo-area">
